--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -13,7 +13,7 @@ src/draw/nxp/g2d @AndreCostaaa
 src/draw/nxp/pxp @uLipe
 src/draw/opengles @AndreCostaaa @kisvegabor
 src/draw/renesas/dave2d @uLipe
-src/draw/sdl @kisvegabor
+src/draw/sdl @kisvegabor @AndreCostaaa
 src/draw/vg_lite @uLipe @FASTSHIFT
 src/drivers/display/drm @AndreCostaaa
 src/drivers/display/fb @AndreCostaaa
