chore(gif):  2 adjustments from Liam's feedback...
- add Liam as CODEOWNER for `src/widgets/gif`
- add new `src/widgets/gif` directory to `component.mk`

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -33,3 +33,4 @@ src/libs/gstreamer @AndreCostaaa
 src/libs/tiny_ttf @AndreCostaaa
 src/libs/vg_lite_driver @uLipe
 src/misc/cache @AndreCostaaa @FASTSHIFT
+src/widgets/gif @liamHowatt
