Update lv_matrix dependencies

--- a/Kconfig
+++ b/Kconfig
@@ -2231,6 +2231,7 @@ menu "LVGL configuration"
 
 		config LV_USE_OPENGLES
 			bool "Use GLFW and OpenGL to open window on PC and handle mouse and keyboard"
+			depends on LV_USE_MATRIX
 			default n
 
 		config LV_USE_OPENGLES_DEBUG
