docs(workflow):  add paths filter to pull requests

--- a/.github/workflows/compile_docs.yml
+++ b/.github/workflows/compile_docs.yml
@@ -1,12 +1,17 @@
 name: Build docs
 on:
   pull_request:
+    paths:
+      # These are the only files that impact the doc build.
+      - 'docs/**'
+      - 'src/**/lv*.h'
+      - 'examples/**'
+      - 'demos/**'
   push:
     branches:
       - master
       - 'release/*'
     paths:
-      # These are the only files that impact the doc build.
       - 'docs/**'
       - 'src/**/lv*.h'
       - 'examples/**'
