--- a/.github/workflows/compile_docs.yml
+++ b/.github/workflows/compile_docs.yml
@@ -7,6 +7,7 @@ on:
       - 'src/**/lv*.h'
       - 'examples/**'
       - 'demos/**'
+      - 'scripts/build_html_examples.sh'
   push:
     branches:
       - master
@@ -16,6 +17,7 @@ on:
       - 'src/**/lv*.h'
       - 'examples/**'
       - 'demos/**'
+      - 'scripts/build_html_examples.sh'
 
 # https://docs.github.com/en/actions/writing-workflows/workflow-syntax-for-github-actions#concurrency
 # Ensure that only one commit will be running tests at a time on each PR
