--- a/.github/workflows/compile_docs.yml
+++ b/.github/workflows/compile_docs.yml
@@ -8,6 +8,7 @@ on:
       - 'examples/**'
       - 'demos/**'
       - 'scripts/build_html_examples.sh'
+      - 'scripts/find_version.sh'
   push:
     branches:
       - master
@@ -18,6 +19,7 @@ on:
       - 'examples/**'
       - 'demos/**'
       - 'scripts/build_html_examples.sh'
+      - 'scripts/find_version.sh'
 
 # https://docs.github.com/en/actions/writing-workflows/workflow-syntax-for-github-actions#concurrency
 # Ensure that only one commit will be running tests at a time on each PR
