docs(build):  update from discussion

--- a/.github/workflows/compile_docs.yml
+++ b/.github/workflows/compile_docs.yml
@@ -2,8 +2,11 @@ name: Build docs
 on:
   pull_request:
     paths:
+      # 'src/**/lv*.h' is not included for pull requests because files in this path
+      # cannot break the doc build, and the purpose of having the docs build for
+      # pull requests is to catch when something breaks the build.  No input files
+      # in that path have the capacity to break the doc build.
       - 'docs/**'
-      - 'src/**/lv*.h'
       - 'examples/**'
       - 'demos/**'
       - 'scripts/build_html_examples.sh'
