ci(docs):  narrow range of what can trigger doc build
I felt that `**/lv*.h` was too wide since doc content exclusively comes
from `src/lv*.h` and `lv_conf_template.h` and `lvgl.h`.  So I restricted
the trigger to that list to be precise and accurate about when the
CPU time to build docs may be consumed.

--- a/.github/workflows/compile_docs.yml
+++ b/.github/workflows/compile_docs.yml
@@ -17,11 +17,13 @@ on:
       - 'release/*'
     paths:
       - 'docs/**'
-      - '**/lv*.h'
+      - 'src/**/lv*.h'
       - 'examples/**'
       - 'demos/**'
       - 'scripts/build_html_examples.sh'
       - 'scripts/find_version.sh'
+      - 'lv_conf_template.h'
+      - 'lvgl.h'
 
 # https://docs.github.com/en/actions/writing-workflows/workflow-syntax-for-github-actions#concurrency
 # Ensure that only one commit will be running tests at a time on each PR
