refactor(anim): enhance lv_anim capabilities, extending support for float.
1. Changed the start/end/cur type in lv_anim from int32_t to lv_value_precise_t.

2. Changed the path callback function from int32_t to lv_value_precise_t.

3. Added support for exec/get_value callback functions of type lv_value_precise_t for compatibility.

4. Added lv_anim_is_finished_cb_t callback for handling animation end conditions.

5. Impact: Because values such as start/end/cur/path_cb have changed from int32_t to float, each step calculation of path_cb will involve floating-point accumulation, resulting in an error of more than 1 pixel in existing test cases, such as those using lv_label.

Signed-off-by: pengxiaolei <pengxiaolei@xiaomi.com>

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -539,10 +539,13 @@ foreach( test_case_fname ${TEST_CASE_FILES} )
             ${LIBINPUT_LIBRARIES}
             ${JPEG_LIBRARIES}
             ${WebP_LINK_LIBRARIES}
-            PkgConfig::FFMPEG
             m
             pthread
             ${TEST_LIBS})
+
+    if(FFMPEG_FOUND)
+        target_link_libraries(${test_name} PRIVATE PkgConfig::FFMPEG)
+    endif()
 
     if(OPTIONS_SDL)
         target_link_libraries(${test_name} PRIVATE ${SDL_LIBRARY})
