--- a/Kconfig
+++ b/Kconfig
@@ -162,6 +162,15 @@ menu "LVGL configuration"
 			Unblocking an RTOS task with a direct notification is 45% faster and uses less RAM
 			than unblocking a task using an intermediary object such as a binary semaphore.
 			RTOS task notifications can only be used when there is only one task that can be the recipient of the event.
+		config LV_OS_IDLE_PERCENT_CUSTOM
+			bool "Custom idle percentage calculation"
+			default n
+			depends on LV_OS_FREERTOS
+			help
+				Enable this to provide a custom implementation of lv_os_get_idle_percent.
+				This is useful for multi-core systems where the default
+				FreeRTOS implementation might not sufficiently track idle time across all cores.
+
 	endmenu
 
 	menu "Rendering Configuration"
